CSS Fixes
Fixing the HTML body when on smaller devices. There was a lot of white
space on the right that cause a horizontal scroll.

Fixed the navbar anchor tag on hover to be the same as the rest of the
page for consistency. The lovely animation to change them to red when
hovered.

--- a/css/main.css
+++ b/css/main.css
@@ -79,7 +79,7 @@ textarea {
 /* ==========================================================================
    Iron Work Custom Styles
    ========================================================================== */
-body { color: #41484C; background-color: #ACBFCC; background-image: url('../img/bg.png'); font-family: 'Lato', sans-serif; }
+body { color: #41484C; background-color: #ACBFCC; background-image: url('../img/bg.png'); font-family: 'Lato', sans-serif; overflow-x: hidden; }
 h1, h2, h3, h4, h5 { font-family: 'Roboto Condensed', sans-serif; text-transform: uppercase; text-shadow: 1px 1px 2px #FFFBDB; }
 h1 { font-size: 3em; }
 p { font-size: 1.3em; color: #FFFBDB; }
@@ -90,7 +90,7 @@ a { color: #41484C;
         -ms-transition: color .5s ease;
          -o-transition: color .5s ease;
 }
-a:hover { color: #9C001A; text-decoration: none; }
+a:hover, .navbar .nav>li>a:hover { color: #9C001A; text-decoration: none; }
 
 /* ==================================
    Bootstrap Overrides
